use the enumerate package to format the description of processes modeled in UMWM

--- a/docs/umwm_manual_v2.tex
+++ b/docs/umwm_manual_v2.tex
@@ -4,6 +4,7 @@
 \usepackage{setspace}
 \usepackage{parskip}
 \usepackage[text={6in,8in},centering]{geometry}
+\usepackage{enumerate}
 \pagenumbering{arabic}
 \pagestyle{plain}
 
@@ -93,15 +94,17 @@ The source functions $S$ are parametric descriptions of the various phenomena th
 The wavenumber spectrum is evaluated in separable magnitude and direction bins. 
 The phenomena relevant to the prediction of storm waves in water of arbitrary depth are: \\
 
-(i) Input of energy and momentum from the wind and export of wave energy and momentum to the wind when the waves overrun or run against the wind; \\
+\begin{enumerate}[(i)]
+\item Input of energy and momentum from the wind and export of wave energy and momentum to the wind when the waves overrun or run against the wind; \\
 
-(ii) Dissipation of wave energy at and near the surface due to viscosity, ambient turbulence and breaking; \\
+\item Dissipation of wave energy at and near the surface due to viscosity, ambient turbulence and breaking; \\
 
-(iii) Enhanced dissipation at and near the top and bottom interfaces due to shoaling; \\
+\item Enhanced dissipation at and near the top and bottom interfaces due to shoaling; \\
 
-(iv) Movement of energy to lower wavenumbers (down-shifting) due to nonlinear interactions including breaking; \\
+\item Movement of energy to lower wavenumbers (down-shifting) due to nonlinear interactions including breaking; \\
 
-(v) Enhanced dissipation due to straining by longer waves. \\
+\item Enhanced dissipation due to straining by longer waves. \\
+\end{enumerate}
 
 The theoretical and experimental justifications for the source functions 
 corresponding to these phenomena are given in Donelan et al. (2012). 
