add subsection describing the sea ice attenation of waves - work in progress

--- a/docs/umwm_manual_v2.tex
+++ b/docs/umwm_manual_v2.tex
@@ -31,7 +31,7 @@ Description and User's Manual
 M.A. Donelan and M. Curcic
 
 \vspace{12 cm}
-September, 2016
+February, 2019
 
 \vspace{0.5 cm}
 Rosenstiel School of Marine and Atmospheric Science
@@ -103,7 +103,9 @@ The phenomena relevant to the prediction of storm waves in water of arbitrary de
 
 \item Movement of energy to lower wavenumbers (down-shifting) due to nonlinear interactions including breaking; \\
 
-\item Enhanced dissipation due to straining by longer waves. \\
+\item Enhanced dissipation due to straining by longer waves; \\
+
+\item Sea ice induced wave attenuation. \\
 \end{enumerate}
 
 The theoretical and experimental justifications for the source functions 
@@ -231,6 +233,9 @@ S_{bp}= -G_{p}\dfrac{k}{\cosh^{2}kd} E(k,\phi)
 \end{equation}
 \\
 where the permeability factor, $G_{p}$ varies from $0.0006$ to $0.01$ m/s, depending on sand grain size.
+
+\subsection{Attenuation of waves due to sea ice $S_{ice}$}
+In presence of sea ice the wave energy in a grid cell ...
 
 
 \newpage
